<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activies.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewComponent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycleViewComponent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextNome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/hint"
                android:ems="10"
                android:hint="@string/hintProduto"
                android:importantForAutofill="no"
                android:inputType="textShortMessage|text"
                tools:text="Produto" />

            <EditText
                android:id="@+id/editTextPreco"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/preco"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/backgroundColor"
                android:backgroundTint="@android:color/white"
                android:contentDescription="@string/adicionar"
                android:onClick="addProduto"
                android:src="@drawable/ic_add_circle_16dp" />

            <ImageButton
                android:id="@+id/imageButtonRemove"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:backgroundTint="@android:color/white"
                android:contentDescription="@string/remove"
                android:onClick="removeProduto"
                android:src="@drawable/ic_remove_circle_16dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>