<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="12dp"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewProduto"
            android:layout_width="203dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/nomeProduto"
            android:gravity="center|start"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:text="Banana" />

        <ImageButton
            android:id="@+id/imageButtonRemove"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/backgroundColor"
            android:contentDescription="@string/remove"
            app:srcCompat="@drawable/ic_remove_circle_16dp" />

        <EditText
            android:id="@+id/editTextQuantidade"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="@string/hint"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint"
            android:inputType="numberDecimal"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/imageButtonAdd"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/backgroundColor"
            android:contentDescription="@string/adicionar"
            app:srcCompat="@drawable/ic_add_circle_16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        tools:text="R$ 0,00" />
</LinearLayout>